# sj-trading

./: .gitignore  CLAUDE.md  money.json  pyproject.toml
.claude/skills/run-sj-trading/: SKILL.md  driver.sh
.github/workflows/: gridbot.yml
src/sj_trading/: __init__.py  api_test.py  backtest.py  get_invest_amt.py  gridbot.py  gridbot_body.py  misc.py  set_init_invest_amt.py
tests/: test_aliasing.py  test_cancel_scope.py  test_capital_persistence.py  test_fee_floor.py  test_order_sizing.py  test_twse_crosscheck.py
